Started work on arch req. Also upload ref pdf

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -1,8 +1,25 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
+\documentclass[11pt,a4paper,titlepage]{article}
+
+%\usepackage{pdflscape}
+\usepackage[margin=1in]{geometry}
+\usepackage{titling}
+%\usepackage{graphicx}
+\usepackage[hidelinks]{hyperref}
+
+
+%\DeclareGraphicsExtensions{.png}
+%\graphicspath{ {./images/} }
+
+
+
+\newcommand{\subtitle}[1]{%
+  \posttitle{%
+    \par\end{center}
+    \begin{center}\large#1\end{center}
+    \vskip0.5em}%
+}
+
 \begin{document}
-•
+
+
 \end{document}
