Set up framework for pdf

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -20,6 +20,38 @@
 }
 
 \begin{document}
+\title{Software Requirements Speciﬁcation and Technology Neutral Process Design}
+\subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}}
 
+\author{\textbf{COS301 Main Project - The fellowship of the CIN}\\
+Frikkie Snyman 13028741\\
+Hanrich Potgieter stdnt num\\
+Hugo Greyvenstein 13019989\\
+Andre Calitz 13020006\\
+Chris Cloete 13029721\\}
 
+\maketitle1
+
+\tableofcontents
+\pagebreak
+
+\setlength{\parindent}{0em}
+\setlength{\parskip}{0.5em}
+\section{Introduction}
+%just use \input{file} here
+	%\input{Architectural_Requirements/ArchitectureRequirements.tex}
+\newpage
+\section{Vision}
+	%\input{Architectural_Requirements/ArchitecturalPatternsStyles.tex}
+\newpage
+\section{Background}
+ 	%\input{Architectural_Requirements/tacticsAndStrategies.tex}
+\newpage 
+\section{Architecture Requirements}
+	%\input{Architectural_Requirements/architecturesAndFrameworks.tex}
+\newpage
+%\input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
+\newpage
+\section{Functional Requirements and application design}
+	%\input{Architectural_Requirements/Architectural_Constraints.tex}
 \end{document}
