--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -39,7 +39,7 @@ Chris Cloete 13029721\\}
 \setlength{\parskip}{0.5em}
 \section{Introduction}
 %just use \input{file} here
-	%\input{Architectural_Requirements/ArchitectureRequirements.tex}
+	\input{intro.tex}
 \newpage
 \section{Vision}
 	%\input{Architectural_Requirements/ArchitecturalPatternsStyles.tex}
