--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -42,7 +42,7 @@ Chris Cloete 13029721\\}
 	\input{intro.tex}
 \newpage
 \section{Vision}
-	%\input{Architectural_Requirements/ArchitecturalPatternsStyles.tex}
+	\input{vision.tex}
 \newpage
 \section{Background}
  	%\input{Architectural_Requirements/tacticsAndStrategies.tex}
