--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -40,12 +40,12 @@ Chris Cloete 13029721\\}
 \section{Introduction}
 %just use \input{file} here
 	\input{intro.tex}
-\newpage
+%\newpage
 \section{Vision}
 	\input{vision.tex}
-\newpage
+%\newpage
 \section{Background}
- 	%\input{Architectural_Requirements/tacticsAndStrategies.tex}
+ 	\input{background.tex}
 \newpage 
 \section{Architecture Requirements}
 	%\input{Architectural_Requirements/architecturesAndFrameworks.tex}
