Started writing Access and Integration requirements

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -48,7 +48,7 @@ Chris Cloete 13029721\\}
  	\input{background.tex}
 \newpage 
 \section{Architecture Requirements}
-	%\input{Architectural_Requirements/architecturesAndFrameworks.tex}
+	\input{accessandintegration.tex}
 \newpage
 %\input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
 \newpage
