Started with Quality Requirements for Documentation

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -48,9 +48,16 @@ Chris Cloete 13029721\\}
  	\input{background.tex}
 \newpage 
 \section{Architecture Requirements}
-	%\input{Architectural_Requirements/architecturesAndFrameworks.tex}
+	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
+	
+	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
+	\subsection{Quality Requirements}
+	\input{qualityrequirements.tex}
+	
+	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
+	
 \newpage
-%\input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
+% \input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
 \newpage
 \section{Functional Requirements and application design}
 	%\input{Architectural_Requirements/Architectural_Constraints.tex}
