--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/qualityrequirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/qualityrequirements.tex
@@ -1,3 +1,4 @@
+\subsection{Quality Requirements}
 \subsubsection{Critical}
 {\bfseries Functionality:} The functionality the system will provide is very important since the estimations given by different experts need to be analysed and visualized in some way for a human user to easily make a decision. The users of the system will access the functionality of the system to aid them in the development of products for clients by providing the human user with visualisations of data, to enable them to make more accurate and informed estimations. The more functionality provided for data-analysis the more successful the project will be regarded.
 \\ \\
@@ -9,3 +10,10 @@
 {\bfseries Maintainability:} The maintainability of the system should be kept in mind while developing the system, because the client will be using the system for everyday operations of the company and the system's availability should be ensured by making it sufficiently maintainable.
 \\ \\
 {\bfseries Scalability:} The client does not require the system to be used by a large amount of people at the same time. According to the requirements of the client at most ten people will be making estimations at the same time, but because we plan on making the system open-source scalability should be kept in mind such that the system will be somewhat scalable.
+
+\subsubsection{Nice to have}
+\begin{itemize}
+	\item{Security}
+	\item{Performance}
+	\item{Reliability}
+\end{itemize}
