Finished quality requirements

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/qualityrequirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/qualityrequirements.tex
@@ -10,10 +10,15 @@
 {\bfseries Maintainability:} The maintainability of the system should be kept in mind while developing the system, because the client will be using the system for everyday operations of the company and the system's availability should be ensured by making it sufficiently maintainable.
 \\ \\
 {\bfseries Scalability:} The client does not require the system to be used by a large amount of people at the same time. According to the requirements of the client at most ten people will be making estimations at the same time, but because we plan on making the system open-source scalability should be kept in mind such that the system will be somewhat scalable.
-
+	\\ \\
+	{\bfseries Reliability:}
+	The system must be produced to be reliable, so that the client always have a reference to estimations made, without being concerned whether the system is running or not.
 \subsubsection{Nice to have}
-\begin{itemize}
-	\item{Security}
-	\item{Performance}
-	\item{Reliability}
-\end{itemize}
+	{\bfseries Security:}
+	Seeing as the system will be used in a closed environment, security is not of utmost concern. However,security will be enhanced by a secure login process, which makes use of the already existing user database, as provided by the client.
+	\\ \\
+	{\bfseries Performance:}
+	Real-time feedback will not be one of the system's important aspects. Thus, performance is not heavily relied upon. However, performance must be taken into account when statistical analysis is done on data, seeing as this can be costly for the server.
+
+	
+
