--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -51,7 +51,7 @@ Chris Cloete 13029721\\}
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
 	
 	\input{accessandintegration.tex}
-	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
+	\input{archresp.tex}
 	\input{qualityrequirements.tex}
 	
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
