--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -53,7 +53,7 @@ Chris Cloete 13029721\\}
 	\input{accessandintegration.tex}
 	\input{archresp.tex}
 	\input{qualityrequirements.tex}
-	
+	\input{archconst.tex}
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
 	
 \newpage
