Started work on technologies

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -55,7 +55,7 @@ Chris Cloete 13029721\\}
 	\input{qualityrequirements.tex}
 	\input{archconst.tex}
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
-	
+	\input{tech.tex}
 \newpage
 % \input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
 \newpage
