--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
@@ -1,3 +1,37 @@
 \subsection{Technologies}
 The following technologies are to be used to implement the system:\\ \\
 {\bfseries Client Side:}
+\begin{itemize}
+	\item AngularJS: \\ \\
+	AngularJS is a technology used on the client side to make it possible to server dynamic view in web-applications. This technology is also fully extensible, thus allowing it to work well with any other libraries.
+	\item Bootstrap: \\ \\
+	Bootstrap is an HTML, CSS and JavaScript framework. Making use of Bootstrap allows for easy development of responsive projects, allowing the web-application to look beautiful on almost any platform.
+	\item jQuery: \\ \\
+	jQuery is a very powerful JavaScript library, which makes things like animations, document manipulation,AJAX, etc. so much simpler to handle. jQuery is an API that works across multiple browsers, allowing compatibility over multiple platforms
+	\item D3: \\ \\
+	D3 is a JavaScript library which is used to manipulate documents which is based on data. D3 is used to visually represent the data contained within the document.
+\end{itemize}
+
+{\bfseries Server Side:}
+\begin{itemize}
+	\item Node.js:\\ \\ 
+	Node.js is an API which is used to easily build scalable, and fast network applications. The API is inherently asynchronous to increase server-side performance.
+	\item Node Package Manager:\\ \\
+	Node Package Manager is used by node.js to manage the packages which will be used on the server. This allows a uniform execution environment to exist.
+	\item MongoDB: \\ \\
+	MongoDB is a document database based on the NoSQL movement. It allows to be very agile, whilst still maintaining scalability and performance.
+\end{itemize}
+{\bfseries Mobile Application}
+\begin{itemize}
+	\item PhoneGap:\\ \\
+	PhoneGap is a utility that creates mobile application from web based technologies. This utility integrates nicely with all the aforementioned technologies in order to produce a mobile, responsive application for smartphones.
+\end{itemize}
+{\bfseries Testing and Integration}
+\begin{itemize}
+	\item Nodeunit:\\ \\
+	Nodeunit will be used to write unit tests for the server side node modules.
+	\item Jasmine and Karma:\\ \\
+	These technologies will be used to perform tests on behavioral JavaScript, as written with the use of AngularJS.
+	\item Travis CI:\\ \\
+	Travis CI will be used to integrate functions based on their appropriate unit tests.
+\end{itemize}
