--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -47,7 +47,7 @@ Chris Cloete 13029721\\}
 \section{Background}
  	\input{background.tex}
 \newpage 
-\section{Architecture Requirements}
+\section{Software and Architecture Requirements}
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
 	
 	\input{accessandintegration.tex}
