Added documentation for Use Case

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -60,5 +60,5 @@ Chris Cloete 13029721\\}
 % \input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
 \newpage
 \section{Functional Requirements and application design}
-	%\input{Architectural_Requirements/Architectural_Constraints.tex}
+	\input{usecase.tex}
 \end{document}
