Added documentation for Use Case

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -1,4 +1,14 @@
-\subsection{Use Case}
+\subsection{Use case prioritization}
 \subsubsection{Critical}
+	\begin{itemize}
+	\item{User integration}
+	\item{Project CRUD}
+	\item{Estimation}
+	\end{itemize}
 \subsubsection{Important}
+	\begin{itemize}
+	\item{Statistical Inference}
+	\end{itemize}
 \subsubsection{Nice-To-Have}
+\subsection{Use case/Services contracts}
+
