Added archtectural patterns

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -56,6 +56,7 @@ Chris Cloete 13029721\\}
 	\input{archconst.tex}
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
 	\input{tech.tex}
+	\input{archpatterns.tex}
 \newpage
 % \input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
 \newpage
