Not really sure if this is ok

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
@@ -1,1 +1,13 @@
 \subsection{Architectural Patterns}
+\subsubsection{Model-View-Controller}
+\begin{itemize}
+	\item{Model}
+	\newline
+	The model will be implemented by making use of Express.js
+	\item{View}
+	\newline
+	The view will be implemented using Bootstrap.
+	\item{Controller}
+	\newline
+	The controller will be implemented by using Angular.js
+\end{itemize}
