Not really sure if this is ok

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
@@ -1,5 +1,6 @@
 \subsection{Architectural Patterns}
 \subsubsection{Model-View-Controller}
+We will use the MVC pattern to implement the user interface.
 \begin{itemize}
 	\item{Model}
 	\newline
