Initial commit for Architectural tactics

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -57,6 +57,7 @@ Chris Cloete 13029721\\}
 	% \input{Architectural_Requirements/architecturesAndFrameworks.tex}
 	\input{tech.tex}
 	\input{archpatterns.tex}
+	\input{archtactics.tex}
 \newpage
 % \input{AccessChannels/AccessChannels.tex}%leave it alone, my headings are in the file
 \newpage
