Some quick ideas for tactics

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archtactics.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archtactics.tex
@@ -1,3 +1,5 @@
 \subsection{Architectural Tactics}
 \subsubsection{Threading}
 We will use threading to increase the scalability of the application. Node.js is inherently asynchronous so this allows us to easily implement threading
+Reduce coupling, use encapsulation
+Defer binding time, use runtime binding
