Added images to the documentation

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -5,6 +5,8 @@
 \usepackage{titling}
 %\usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
+\usepackage{graphicx}
+\usepackage{float}
 
 
 %\DeclareGraphicsExtensions{.png}
@@ -22,6 +24,9 @@
 \begin{document}
 \title{Software Requirements Speciﬁcation and Technology Neutral Process Design}
 \subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}}
+
+\DeclareGraphicsExtensions{.png}
+\graphicspath{{../drawings/}}
 
 \author{\textbf{COS301 Main Project - The fellowship of the CIN}\\
 Frikkie Snyman 13028741\\
