--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
@@ -11,4 +11,10 @@ We will use the MVC pattern to implement the user interface.
 	\item{Controller}
 	\newline
 	The controller will be implemented by using Angular.js
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{MVC}}
+	    	\caption{Model View Controller}
+	    	\label{fig:Learning rate 0.1}
+   	\end{figure}
 \end{itemize}
