added advantages to the archtectural patterns

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
@@ -17,4 +17,12 @@ We will use the MVC pattern to implement the user interface.
 	    	\caption{Model View Controller}
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
+	The purpose of the MVC is to decouple the the entities from each other. This will allow us to build Phonegap apps out of our client side. Each component can the evolve on its own through the development phase. 
+	The properties of the MVC that we want to take advantage of is as follows.
+	\begin{itemize}
+		\item Simplification through separation of concerns.
+		\item Reuse of the view components.
+		\item Maintainability, that facilitates the development by different team members.
+		\item Testability as testing is a crucial part of our design and thus this has a great influence.
+	\end{itemize}
 \end{itemize}
