Updated Software requremnts

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -24,7 +24,7 @@
 
 \author{\textbf{COS301 Main Project - The fellowship of the CIN}\\
 Frikkie Snyman 13028741\\
-Hanrich Potgieter stdnt num\\
+Hanrich Potgieter 12287343\
 Hugo Greyvenstein 13019989\\
 Andre Calitz 13020006\\
 Chris Cloete 13029721\\}
