--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -25,7 +25,7 @@
 
 \author{\textbf{COS301 Main Project - The fellowship of the CIN}\\
 Frikkie Snyman 13028741\\
-Hanrich Potgieter 12287343\
+Hanrich Potgieter 12287343\\
 Hugo Greyvenstein 13019989\\
 Andre Calitz 13020006\\
 Chris Cloete 13029721\\}
