--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/Software requirements.tex
@@ -58,7 +58,7 @@ Chris Cloete 13029721\\}
 
 	\input{archpatterns.tex}
 	\input{archtactics.tex}	
-	
+	\input{referencearchitectures.tex}
 	\input{tech.tex}
 	
 \newpage
