--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/referencearchitectures.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/referencearchitectures.tex
@@ -1,1 +1,18 @@
-Reference architectures
+\subsection{Reference architectures}
+\subsubsection{text}
+{\bfseries text:} text
+\\ \\
+{\bfseries text:} text
+\\ \\
+{\bfseries text:} text
+
+\subsubsection{txt}
+{\bfseries txt:} txt
+\\ \\
+{\bfseries txt:} Ttext
+	\\ \\
+	{\bfseries txt:}text
+\subsubsection{text}
+	{\bfseries txt:}text
+	\\ \\
+	{\bfseries text:}text
