--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archpatterns.tex
@@ -17,7 +17,7 @@ We will use the MVC pattern to implement the user interface.
 	    	\caption{Model View Controller}
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
-	The purpose of the MVC is to decouple the the entities from each other. This will allow us to build Phonegap apps out of our client side. Each component can the evolve on its own through the development phase. 
+	The purpose of the MVC is to decouple the entities from each other. This will allow us to build Phonegap apps out of our client side. Each component can the evolve on its own through the development phase. 
 	The properties of the MVC that we want to take advantage of is as follows.
 	\begin{itemize}
 		\item Simplification through separation of concerns.
