--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
@@ -1,5 +1,5 @@
 \subsection{Technologies}
-The following technologies are to be used to implement the system:\\ \\
+The following technologies will be used in the implementation of the system:\\ \\
 {\bfseries Client Side:}
 \begin{itemize}
 	\item AngularJS: \\ \\
