Improvements to Architectual Tactics Framework

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archtactics.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/archtactics.tex
@@ -1,5 +1,15 @@
 \subsection{Architectural Tactics}
-\subsubsection{Threading}
-We will use threading to increase the scalability of the application. Node.js is inherently asynchronous so this allows us to easily implement threading
-Reduce coupling, use encapsulation
-Defer binding time, use runtime binding
+\subsubsection{Minimize technology suite}
+\subsubsection{Dependency Injection}
+\subsubsection{Contracts Based Development}
+\subsubsection{Support Plug-in Framework}
+\subsubsection{Database Abstraction}
+\subsubsection{Automated Persistence Mapping}
+\subsubsection{Caching}
+\subsubsection{Connection pooling}
+\subsubsection{Templating}
+\subsubsection{UI Components Framework}
+\subsubsection{Asynchronous Processing}
+\subsubsection{Off-load Rendering Responsibilities to Client}
+\subsubsection{REST Web-services}
+\subsubsection{Logging}
