--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
@@ -20,6 +20,10 @@ The following technologies are to be used to implement the system:\\ \\
 	Node Package Manager is used by node.js to manage the packages which will be used on the server. This allows a uniform execution environment to exist.
 	\item MongoDB: \\ \\
 	MongoDB is a document database based on the NoSQL movement. It allows to be very agile, whilst still maintaining scalability and performance.
+	\item mongoose \\ \\
+	Mongoose will provide us with connection to the database. Schemers will provide us with consistent data.
+	\item ldapjs \\ \\
+	This will allow us to connect to the client database and obtain the user data.
 \end{itemize}
 {\bfseries Mobile Application}
 \begin{itemize}
