--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/tech.tex
@@ -21,7 +21,7 @@ The following technologies will be used in the implementation of the system:\\ \
 	\item MongoDB: \\ \\
 	MongoDB is a document database based on the NoSQL movement. It allows to be very agile, whilst still maintaining scalability and performance.
 	\item mongoose \\ \\
-	Mongoose will provide us with connection to the database. Schemers will provide us with consistent data.
+	Mongoose will provide us with connection to the database. Schemers will provide us with consistent data in the database.
 	\item ldapjs \\ \\
 	This will allow us to connect to the client database and obtain the user data.
 \end{itemize}
