--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -1,13 +1,15 @@
 \subsection{Use case prioritization}
 \subsubsection{Critical}
 	\begin{itemize}
-	\item{User integration}
-	\item{Project CRUD}
+	\item{User Managment}
+	\item{Project}
 	\item{Estimation}
+	\item{Report}
+	\item{Notification}
 	\end{itemize}
 \subsubsection{Important}
 	\begin{itemize}
-	\item{Statistical Inference}
+	\item{Notification}
 	\end{itemize}
 \subsubsection{Nice-To-Have}
 \subsection{Use case/Services contracts}
