--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -1,16 +1,21 @@
-\subsection{Use case prioritization}
-\subsubsection{Critical}
-	\begin{itemize}
-	\item{User Managment}
-	\item{Project}
-	\item{Estimation}
-	\item{Report}
-	\item{Notification}
-	\end{itemize}
-\subsubsection{Important}
-	\begin{itemize}
-	\item{Notification}
-	\end{itemize}
-\subsubsection{Nice-To-Have}
-\subsection{Use case/Services contracts}
-
+\subsection{User Management}
+\subsubsection{Scope}
+\paragraph{Test}
+\subsubsection{Use cases}
+\subsubsection{Domain model}
+\subsection{Project}
+\subsubsection{Scope}
+\subsubsection{Use cases}
+\subsubsection{Domain model}
+\subsection{Estimation}
+\subsubsection{Scope}
+\subsubsection{Use cases}
+\subsubsection{Domain model}
+\subsection{Report}
+\subsubsection{Scope}
+\subsubsection{Use cases}
+\subsubsection{Domain model}
+\subsection{Notification}
+\subsubsection{Scope}
+\subsubsection{Use cases}
+\subsubsection{Domain model}
