--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -1,4 +1,5 @@
 \subsection{User Management}
+This module is responsible for reading data from the client user database. It will do this by making use of ldap.js .
 \subsubsection{Scope}
 \paragraph{Test}
 \subsubsection{Use cases}
