--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -3,6 +3,11 @@ This module is responsible for reading data from the client user database. It wi
 \subsubsection{Scope}
 \paragraph{Test}
 \subsubsection{Use cases}
+\begin{itemize}
+\item Autorize
+\item validateUserName
+\item retrieveEmail
+\end{itemize}
 \subsubsection{Domain model}
 \subsection{Project}
 \subsubsection{Scope}
