Added Integrability to quality requirements

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/qualityrequirements.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/qualityrequirements.tex
@@ -9,6 +9,9 @@
 	{\bfseries Reliability:}
 	The system must be produced to be reliable, so that the client always has a reference to estimations made, without being concerned whether the system is running or not. The system needs to be reliable since the access to the data and results will be sporadic and can occur at almost any time.
 	\\ \\
+	{\bfseries Integrability:}
+	The system should be integrable with other systems in the future therefore the system will need to make use of standard protocols.
+	\\ \\
 	{\bfseries Maintainability:}
 	The client wants to improve the system and continue development on the system. This requires the system to be maintainable, to enable the client to easily integrate new functionality and code. Maintainability is coupled with the flexibility and testability of the system.
 \subsubsection{Important}
@@ -21,7 +24,4 @@
 	{\bfseries Testability:}
 	This is an important quality for the system to have with regards to the flexibility of the system. This quality will improve the flexibility of the system for easy integration of new modules and functionality by allowing features to be tested.
 \subsubsection{Nice to have}
-	{\bfseries Integrability:}
-	The system is required to use LDAP to connect to a users database managed by the client.
-	\\ \\
 	{\bfseries Deployability:} The system should be deployable on Linux, the estimation should be persisted to a database and it should authenticate the user by querying a repository provided by the client.
