Started work on Project module use cases

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -10,8 +10,14 @@ This module is responsible for reading data from the client user database. It wi
 \end{itemize}
 \subsubsection{Domain model}
 \subsection{Project}
+The project module is responsible for the representation and persistence of all projects that the system will use to do the estimations on. This module will allow for complex projects to be created, as well as to be updated. A project is represented as a tree, consisting of a top-level project node and lower-level task nodes.
 \subsubsection{Scope}
+
 \subsubsection{Use cases}
+\paragraph{Create a project}
+\paragraph{Get project}
+\paragraph{Hide proejct}
+\paragraph{Update project}
 \subsubsection{Domain model}
 \subsection{Estimation}
 \subsubsection{Scope}
