Added notification use case

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -23,5 +23,12 @@ This module is responsible for reading data from the client user database. It wi
 \subsubsection{Domain model}
 \subsection{Notification}
 \subsubsection{Scope}
+This is the notification scope
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{Notification_Scope}}
+	    	\caption{Notifications Scop}
+	    	\label{fig:Notification_Scope}
+   	\end{figure}
 \subsubsection{Use cases}
 \subsubsection{Domain model}
