--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -27,7 +27,7 @@ This is the notification scope
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{Notification_Scope}}
-	    	\caption{Notifications Scop}
+	    	\caption{Notifications Scope}
 	    	\label{fig:Notification_Scope}
    	\end{figure}
 \subsubsection{Use cases}
