--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -21,6 +21,9 @@ This module is responsible for reading data from the client user database. It wi
 \subsubsection{Scope}
 \subsubsection{Use cases}
 \subsubsection{Domain model}
+%============================
+%Notification
+%============================
 \subsection{Notification}
 \subsubsection{Scope}
 This is the notification scope
