--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -9,15 +9,24 @@ This module is responsible for reading data from the client user database. It wi
 \item retrieveEmail
 \end{itemize}
 \subsubsection{Domain model}
+
 \subsection{Project}
 The project module is responsible for the representation and persistence of all projects that the system will use to do the estimations on. This module will allow for complex projects to be created, as well as to be updated. A project is represented as a tree, consisting of a top-level project node and lower-level task nodes.
+
 \subsubsection{Scope}
 
 \subsubsection{Use cases}
-\paragraph{Create a project}
-\paragraph{Get project}
-\paragraph{Hide proejct}
-\paragraph{Update project}
+
+\paragraph{Create a project - priority: critical}
+Users with sufficient privileges can create projects.
+
+\paragraph{Get project - priority: critical}
+Users with sufficient privileges can retrieve projects to view them, or to be used for other purposes. This use case must thus return a representation of the project-tree, and not produce the output of the project tree.
+
+\paragraph{Hide project}
+\paragraph{Update project - priority: critical}
+
+
 \subsubsection{Domain model}
 \subsection{Estimation}
 \subsubsection{Scope}
