--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -1,3 +1,6 @@
+%============================
+%User Management
+%============================
 \subsection{User Management}
 This module is responsible for reading data from the client user database. It will do this by making use of ldap.js .
 \subsubsection{Scope}
@@ -10,6 +13,9 @@ This module is responsible for reading data from the client user database. It wi
 \end{itemize}
 \subsubsection{Domain model}
 
+%============================
+%Project
+%============================
 \subsection{Project}
 The project module is responsible for the representation and persistence of all projects that the system will use to do the estimations on. This module will allow for complex projects to be created, as well as to be updated. A project is represented as a tree, consisting of a top-level project node and lower-level task nodes.
 
@@ -28,6 +34,10 @@ Users with sufficient privileges can retrieve projects to view them, or to be us
 
 
 \subsubsection{Domain model}
+
+%============================
+%Estimation
+%============================
 \subsection{Estimation}
 \subsubsection{Scope}
 \subsubsection{Use cases}
