--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -41,5 +41,7 @@ This is the notification scope
 	    	\label{fig:Notification_Scope}
    	\end{figure}
 \subsubsection{Use cases}
-The main purpose of notifications is to notify users with the required message. The project will supply the list of users to notify and the contents of the message.
+The main purpose of notifications is to notify users with the required message. The estimation module will supply the list of users to notify and the contents of the message.
+\paragraph{sendMesssage -- priority:mustHave}
+\paragraph{createNotification -- priority:niceToHave}
 \subsubsection{Domain model}
