--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -52,6 +52,9 @@ Users with sufficient privileges can retrieve projects to view them, or to be us
 	\paragraph{estimateTask - priority:critical}This system will allow a user to place an estimation on a task.
 	\paragraph{calculateTotalEstimation - priority:critical}This system will traverse the project tree and calculate the total estimation of a project.
 \subsubsection{Domain model}
+%============================
+%Report
+%============================
 \subsection{Report}
 \subsubsection{Scope}
 \subsubsection{Use cases}
