Magic Draw File

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -46,6 +46,7 @@ Users with sufficient privileges can retrieve projects to view them, or to be us
 \subsubsection{Scope}
 \subsubsection{Use cases}
 \subsubsection{Domain model}
+
 %============================
 %Notification
 %============================
@@ -61,6 +62,6 @@ This is the notification scope
    	\end{figure}
 \subsubsection{Use cases}
 The main purpose of notifications is to notify users with the required message. The estimation module will supply the list of users to notify and the contents of the message.
-\paragraph{sendMesssage -- priority:mustHave}
+\paragraph{sendMesssage -- priority:niceToHave}
 \paragraph{createNotification -- priority:niceToHave}
 \subsubsection{Domain model}
