Continued work on Report Use Cases

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -63,7 +63,7 @@ The Report module will do statistical analysis on the data as well as draw graph
 The scope of this module will be accessible to any user at this point in the development, the only authorization that will take place is the initial log in of the user.
 	\begin{figure}[H]
 	    	\centering
-	    	\fbox{\includegraphics[width=0.8\textwidth]{Notification_Scope}}
+	    	\fbox{\includegraphics[width=0.8\textwidth]{Report_Scope}}
 	    	\caption{Report Scope}
 	    	\label{fig:Report_Scope.png}
    	\end{figure}
